--- a/wp-content/themes/understrap-child/aaOLDFILES/html & php/base/quarentined dupes/_container_styles.scss
+++ b/wp-content/themes/understrap-child/aaOLDFILES/html & php/base/quarentined dupes/_container_styles.scss
@@ -1,3 +1,8 @@
+.container{
+	width: 83.82%;
+}
+
+
 	#idooutcomes{ width: 30px;}
 @media (max-width:35em) {
 	.navbar>.container, .navbar>.container-fluid { width: 90%; position: relative; margin: 0 auto; }
