--- a/wp-content/themes/understrap-child/sass/theme/partials/_global_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/_global_styles.scss
@@ -20,52 +20,52 @@ $zindex-tooltip:                    1070 !default; */
     //   font-size: 6px,
     //   line-height: 1.5,
     //   modular-scale: perfect-fifth,
-    //   grid-color: purple
+      // grid-color: purple
     // ),
-    25em: ( // 400px
-      font-size: 8px,
-      line-height: 1.5,
-      modular-scale: perfect-fifth,
-      grid-color: purple
-    ),
-  30em: ( // 480px
-      font-size: 8px,
-      line-height: 1.5,
-      modular-scale: perfect-fifth,
-      grid-color: blue
-    ),
-  35em: ( // 560px
-      font-size: 8px,
-      line-height: 1.5,
-      modular-scale: perfect-fifth,
-      grid-color: green
-    ),
-    40em: ( // 640px
-        font-size: 8px,
-        line-height: 1.5,
-        modular-scale: perfect-fifth,
-        grid-color: yellow
-    ),
+  //   25em: ( // 400px
+  //     font-size: 8px,
+  //     line-height: 1.5,
+  //     modular-scale: perfect-fifth,
+  //     grid-color: purple
+  //   ),
+  // 30em: ( // 480px
+  //     font-size: 8px,
+  //     line-height: 1.5,
+  //     modular-scale: perfect-fifth,
+  //     grid-color: blue
+  //   ),
+  // 35em: ( // 560px
+  //     font-size: 8px,
+  //     line-height: 1.5,
+  //     modular-scale: perfect-fifth,
+  //     grid-color: green
+  //   ),
+  //   40em: ( // 640px
+  //       font-size: 8px,
+  //       line-height: 1.5,
+  //       modular-scale: perfect-fifth,
+  //       grid-color: yellow
+  //   ),
     48em: ( // 768px
-        font-size    : 8px,
+        font-size    : 9px,
         line-height  : 1.5,
         modular-scale: perfect-fifth,
         grid-color   : orange,
     ),
-    64em: ( // 1024px
-        font-size    :8px,
-        line-height  : 1.5,
-        modular-scale: perfect-fifth,
-        grid-color   : purple,
-    ),
+    // 64em: ( // 1024px
+    //     font-size    :9px,
+    //     line-height  : 1.5,
+    //     modular-scale: perfect-fifth,
+    //     grid-color   : purple,
+    // ),
     78em: ( // 1248px
-        font-size    : 8px,
+        font-size    : 12px,
         line-height  : 1.5,
         modular-scale: perfect-fifth,
         grid-color   : blue,
     ),
     90em: ( // 1440px
-        font-size    : 12,
+        font-size    : 9,
         line-height  : 1.5,
         modular-scale: perfect-fifth,
         grid-color   : blue,
